--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Maksim M
 description: Software Developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar:
+avatar: https://avatars0.githubusercontent.com/u/2039290?v=3&s=466
 
 #
 # Flags below are optional
